dynamically loading plugins, demonstrated code

--- a/src/modules/baseModule/appShell/view.html
+++ b/src/modules/baseModule/appShell/view.html
@@ -1,5 +1,1 @@
-<br/>
-<div id="appShell" >
-       hh Congratulations! You are one step closer to creating your next large scale Javascript application!
-        Following sections briefly describe the component samples we have implemented for your reference.
-</div>
+<div id="appShell" ></div>
