--- a/src/plugins/ContactDetails/view.html
+++ b/src/plugins/ContactDetails/view.html
@@ -1,14 +1,14 @@
 <div class="portlet-gray">
 
     <div class="title">
-        <span>Owner Details</span>
+        <span>Contact Person Details</span>
     </div>
 
     <div class="content">
         <table data-bind="with:employee">
             <tbody>
                 <tr>
-                    <td>ID</td>
+                    <td>SSN</td>
                     <td><strong data-bind="text: id"></strong></td>
                 </tr>
                 <tr>
@@ -28,8 +28,8 @@
                     <td><strong data-bind="text: email"></strong></td>
                 </tr>
                 <tr>
-                    <td>Average Sales</td>
-                    <td><strong data-bind="text: averageSales"></strong></td>
+                    <td>Phone</td>
+                    <td><strong data-bind="text: phone"></strong></td>
                 </tr>
             </tbody>
         </table>
