--- a/src/plugins/OrderDetails/view.html
+++ b/src/plugins/OrderDetails/view.html
@@ -8,28 +8,24 @@
         <table data-bind="with:employee">
             <tbody>
                 <tr>
-                    <td>ID</td>
+                    <td>Order ID</td>
                     <td><strong data-bind="text: id"></strong></td>
                 </tr>
                 <tr>
-                    <td>First name</td>
-                    <td><strong data-bind="text: firstName"></strong></td>
+                    <td>Product</td>
+                    <td><strong data-bind="text: product"></strong></td>
                 </tr>
                 <tr>
-                    <td>Last name</td>
-                    <td><strong data-bind="text: lastName"></strong></td>
+                    <td>Unit Price</td>
+                    <td><strong data-bind="text: price"></strong></td>
                 </tr>
                 <tr>
-                    <td>Age</td>
-                    <td><strong data-bind="text: age"></strong></td>
+                    <td>Quantity</td>
+                    <td><strong data-bind="text: quantity"></strong></td>
                 </tr>
                 <tr>
-                    <td>Email</td>
-                    <td><strong data-bind="text: email"></strong></td>
-                </tr>
-                <tr>
-                    <td>Average Sales</td>
-                    <td><strong data-bind="text: averageSales"></strong></td>
+                    <td>Order Date</td>
+                    <td><strong data-bind="text: date"></strong></td>
                 </tr>
             </tbody>
         </table>
