--- a/src/plugins/ShippingDetails/view.html
+++ b/src/plugins/ShippingDetails/view.html
@@ -8,28 +8,20 @@
         <table data-bind="with:employee">
             <tbody>
                 <tr>
-                    <td>ID</td>
+                    <td>Shipment ID</td>
                     <td><strong data-bind="text: id"></strong></td>
                 </tr>
                 <tr>
-                    <td>First name</td>
-                    <td><strong data-bind="text: firstName"></strong></td>
+                    <td>Adderss Type</td>
+                    <td><strong data-bind="text: type"></strong></td>
                 </tr>
                 <tr>
-                    <td>Last name</td>
-                    <td><strong data-bind="text: lastName"></strong></td>
+                    <td>Address</td>
+                    <td><strong data-bind="text: address"></strong></td>
                 </tr>
                 <tr>
-                    <td>Age</td>
-                    <td><strong data-bind="text: age"></strong></td>
-                </tr>
-                <tr>
-                    <td>Email</td>
-                    <td><strong data-bind="text: email"></strong></td>
-                </tr>
-                <tr>
-                    <td>Average Sales</td>
-                    <td><strong data-bind="text: averageSales"></strong></td>
+                    <td>Shipment Date</td>
+                    <td><strong data-bind="text: date"></strong></td>
                 </tr>
             </tbody>
         </table>
