added 'plugin.js' to astract the plugin dependencies and MVX technology

--- a/src/modules/baseModule/mainMenu/view.html
+++ b/src/modules/baseModule/mainMenu/view.html
@@ -5,6 +5,15 @@
     <span class="menu-item" id="home"><a href="#">{{nls.home}}</a></span>
 </ul>
 <ul>
+    <span class="menu-item" id="product-module-a">{{nls.productmoduledyna}}</span>
+    <li>
+        <a href="##/shipping-app">{{nls.shippingapp}}</a>
+    </li>
+    <li>
+        <a href="##/order-app">{{nls.orderapp}}</a>
+    </li>
+</ul>
+<ul>
     <span class="menu-item" id="product-module-a">{{nls.productmodulea}}</span>
     <li>
         <a href="#clickcounter">{{nls.clickcounter}}</a>
